--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aws-sdk-v3-iam-examples",
   "version": "1.0.0",
   "main": "index.js",
+  "start": "node index.js",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.3.0",
     "@aws-sdk/node-http-handler": "^3.3.0",
